# virtual-assistant

./: .gitignore  README.md
src/: package-lock.json  package.json
src/chatbot/: README.md  pyproject.toml
src/chatbot/chatbot/: Practical_c1.ipynb  main.py  smartphone_embeddings.npy
src/client/: package-lock.json  package.json
src/client/src/: App.js
